--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -1,6 +1,8 @@
 name: build, push and deploy
 on:
   push:
+    branches:
+      - main
   pull_request:
 
 jobs:
@@ -19,3 +21,25 @@ jobs:
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest -f Dockerfile .
       - name: Push image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+  
+  in_place_deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to server
+        uses: appleboy/ssh-action
+        # https://github.com/marketplace/actions/ssh-remote-commands
+        with:
+          host: ${{secrets.HOST}}
+          key: ${{secrets.SSH_PRIVATE_KEY}}
+          username: ${{secrets.USER}}
+          script: |
+            echo "Pull the latest image"
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+            echo "Stop and remove container"
+            if docker ps -a --format '{{.Names}}' | grep -q '^sklearn_flask$'; then
+              docker stop sklearn_flask && docker rm sklearn_flask
+            fi
+            echo "Run container"
+            docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+
