--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -40,6 +40,6 @@ jobs:
             if docker ps -a --format '{{.Names}}' | grep -q '^sklearn_flask$'; then
               docker stop sklearn_flask && docker rm sklearn_flask
             fi
-            echo "Run container"
+            echo "Run the container"
             docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
 
