--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -27,7 +27,7 @@ jobs:
     needs: build
     steps:
       - name: Deploy to server
-        uses: appleboy/ssh-action
+        uses: appleboy/ssh-action@master
         # https://github.com/marketplace/actions/ssh-remote-commands
         with:
           host: ${{secrets.HOST}}
