--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -5,6 +5,8 @@ on:
       - main
   pull_request:
 
+env:
+  AWS_REGION: ca-central-1
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,24 +24,38 @@ jobs:
       - name: Push image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
   
-  in_place_deploy:
+  # in_place_deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Deploy to server
+  #       uses: appleboy/ssh-action@master
+  #       # https://github.com/marketplace/actions/ssh-remote-commands
+  #       with:
+  #         host: ${{secrets.HOST}}
+  #         key: ${{secrets.SSH_PRIVATE_KEY}}
+  #         username: ${{secrets.USER}}
+  #         script: |
+  #           whoami
+  #           echo "Pull the latest image"
+  #           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+  #           echo "Stop and remove container"
+  #           if docker ps -a --format '{{.Names}}' | grep -q '^sklearn_flask$'; then
+  #             docker stop sklearn_flask && docker rm sklearn_flask
+  #           fi
+  #           echo "Run the container"
+  #           docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+  AWSCodeDeploy-Deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to server
-        uses: appleboy/ssh-action@master
-        # https://github.com/marketplace/actions/ssh-remote-commands
-        with:
-          host: ${{secrets.HOST}}
-          key: ${{secrets.SSH_PRIVATE_KEY}}
-          username: ${{secrets.USER}}
-          script: |
-            whoami
-            echo "Pull the latest image"
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
-            echo "Stop and remove container"
-            if docker ps -a --format '{{.Names}}' | grep -q '^sklearn_flask$'; then
-              docker stop sklearn_flask && docker rm sklearn_flask
-            fi
-            echo "Run the container"
-            docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+    - uses: actions/checkout@v2
+    - uses: aws-actions/configure-aws-credentials@v1
+      with:
+        role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
+        role-session-name: GitHub-Action-Role
+        aws-region: ${{ env.AWS_REGION }}
+    - run: |
+        echo "Deploying branch ${{ env.GITHUB_REF }} to ${{ github.event.inputs.environment }}"
+        commit_hash=`git rev-parse HEAD`
+        aws deploy create-deployment --application-name CodeDeployAppNameWithASG --deployment-group-name CodeDeployGroupName --github-location repository=$GITHUB_REPOSITORY,commitId=$commit_hash --ignore-application-stop-failures
