--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -47,7 +47,7 @@ jobs:
   #           docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
   AWSCodeDeploy-Deploy:
     runs-on: ubuntu-latest
-    needs: build
+    # needs: build
     steps:
     - uses: actions/checkout@v2
     - uses: aws-actions/configure-aws-credentials@v2
