--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -48,6 +48,10 @@ jobs:
   AWSCodeDeploy-Deploy:
     runs-on: ubuntu-latest
     # needs: build
+    # These permissions are needed to interact with GitHub's OIDC Token endpoint.
+    permissions:
+      id-token: write
+      contents: read
     steps:
     - uses: actions/checkout@v2
     - uses: aws-actions/configure-aws-credentials@v2
