--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -2,7 +2,8 @@ name: build, push and deploy
 on:
   push:
     branches:
-      - main
+      - blue-green-deployment
+      - in-place-deployment
   pull_request:
 
 env:
@@ -24,42 +25,24 @@ jobs:
       - name: Push image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
   
-  # in_place_deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Deploy to server
-  #       uses: appleboy/ssh-action@master
-  #       # https://github.com/marketplace/actions/ssh-remote-commands
-  #       with:
-  #         host: ${{secrets.HOST}}
-  #         key: ${{secrets.SSH_PRIVATE_KEY}}
-  #         username: ${{secrets.USER}}
-  #         script: |
-  #           whoami
-  #           echo "Pull the latest image"
-  #           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
-  #           echo "Stop and remove container"
-  #           if docker ps -a --format '{{.Names}}' | grep -q '^sklearn_flask$'; then
-  #             docker stop sklearn_flask && docker rm sklearn_flask
-  #           fi
-  #           echo "Run the container"
-  #           docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
-  AWSCodeDeploy-Deploy:
+  in_place_deploy:
     runs-on: ubuntu-latest
-    # needs: build
-    # These permissions are needed to interact with GitHub's OIDC Token endpoint.
-    permissions:
-      id-token: write
-      contents: read
+    needs: build
     steps:
-    - uses: actions/checkout@v2
-    - uses: aws-actions/configure-aws-credentials@v2
-      with:
-        role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
-        role-session-name: GitHub-Action-Role
-        aws-region: ${{ env.AWS_REGION }}
-    - run: |
-        echo "Deploying branch ${{ env.GITHUB_REF }} to ${{ github.event.inputs.environment }}"
-        commit_hash=`git rev-parse HEAD`
-        aws deploy create-deployment --application-name CodeDeployAppNameWithASG --deployment-group-name CodeDeployGroupName --github-location repository=$GITHUB_REPOSITORY,commitId=$commit_hash --ignore-application-stop-failures
+      - name: Deploy to server
+        uses: appleboy/ssh-action@master
+        # https://github.com/marketplace/actions/ssh-remote-commands
+        with:
+          host: ${{secrets.HOST}}
+          key: ${{secrets.SSH_PRIVATE_KEY}}
+          username: ${{secrets.USER}}
+          script: |
+            whoami
+            echo "Pull the latest image"
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+            echo "Stop and remove container"
+            if docker ps -a --format '{{.Names}}' | grep -q '^sklearn_flask$'; then
+              docker stop sklearn_flask && docker rm sklearn_flask
+            fi
+            echo "Run the container"
+            docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
