--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -30,7 +30,7 @@ jobs:
     needs: build
     steps:
       - name: Deploy to server
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v.0.1.3
         # https://github.com/marketplace/actions/ssh-remote-commands
         with:
           host: ${{secrets.HOST}}
