--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ MarkupSafe==2.0.1
 matplotlib==3.5.1
 numpy==1.22.0
 packaging==21.3
-pandas==1.3.5
+pandas
 Pillow==9.0.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
