--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 env:
-  AWS_REGION: ca-central-1
+  AWS_REGION: us-east-1
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -60,6 +60,6 @@ jobs:
         role-session-name: GitHub-Action-Role
         aws-region: ${{ env.AWS_REGION }}
     - run: |
-        echo "Deploying branch $GITHUB_REF to ${{ github.event.inputs.environment }}"
+        echo "Deploying branch ${GITHUB_REF#refs/heads/} to AWS"
         commit_hash=`git rev-parse HEAD`
         aws deploy create-deployment --application-name CodeDeployAppNameWithASG --deployment-group-name CodeDeployGroupName --github-location repository=$GITHUB_REPOSITORY,commitId=$commit_hash --ignore-application-stop-failures
