--- a/.github/workflows/deliver.yaml
+++ b/.github/workflows/deliver.yaml
@@ -38,10 +38,10 @@ jobs:
           script: |
             whoami
             echo "Pull the latest image"
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
             echo "Stop and remove container"
-            if docker ps -a --format '{{.Names}}' | grep -q '^sklearn_flask$'; then
-              docker stop sklearn_flask && docker rm sklearn_flask
+            if sudo docker ps -a --format '{{.Names}}' | grep -q '^sklearn_flask$'; then
+              sudo docker stop sklearn_flask && docker rm sklearn_flask
             fi
             echo "Run the container"
-            docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
+            sudo docker run -d -p 8000:8000 --name sklearn_flask ${{ secrets.DOCKERHUB_USERNAME }}/sklearn_flask:latest
